# learnOpenGL

./: .clang-format  CMakeLists.txt  README.md
include/: camera.h  fpv_camera.h  input_handler.h  learn_tools.h  mesh.h  model.h  modle_camera.h  shader.h  stb_image.h
include/glad/: glad.h
resources/objects/robot/: sg01.fbx  sg02.fbx  sg03.fbx  sg04.fbx  sg05.fbx  sg06.fbx  sg07.fbx  test01.fbx  test02.fbx  test03.fbx  test03.glb  无标题.blend  无标题.blend1
shader/: 1.colors.fs  1.colors.vs  4.2.texture.fs  f_shader.fs  infinite_grid.fs  infinite_grid.vs  model_load.fs  model_load.vs
shell_script/: build.sh  sim_start.sh
src/: input_handler.cpp  main copy.cpp  main.cpp
src/opengl_lib/: glad.c
